Add TLS cert setup readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 unary-echo-client/unary-echo-client
 unary-echo-server/unary-echo-server
 streaming-echo-server/streaming-echo-server
+tls/*
+!tls/encryption.md
