build a key/cert for the client, to be used for mTLS

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ unary-echo-server/unary-echo-server
 streaming-echo-server/streaming-echo-server
 tls/*
 !tls/encryption.md
-!tls/grpc-server.cnf
+!tls/*.cnf
